# recipes-app

./: .dockerignore  .gitignore  Dockerfile  db_env_sample.txt  default.conf  django_env_sample.txt  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  env_sample.txt  pyproject.toml  recipes.conf
apps/core/: models.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/tests/: test_urls.py  test_views.py
config/: settings.py  urls.py
frontend/: index.html  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Copyright.jsx  Footer.jsx  Header.jsx  MenuBar.jsx  Modal.jsx  RecipeCard.jsx  RecipeForm.jsx  SearchField.jsx  Spinner.jsx
frontend/src/context/: DataContext.jsx
frontend/src/pages/: Index.jsx
